--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,6 +3,7 @@
     <style name="Base.Theme.PfadiTechnik" parent="Theme.Material3.DayNight.NoActionBar">
         <!-- Customize your light theme here. -->
         <item name="colorPrimary">@color/darkgreen</item>
+        <item name="android:textColor">@color/black</item>
     </style>
 
     <style name="Theme.PfadiTechnik" parent="Base.Theme.PfadiTechnik" />
@@ -12,5 +13,9 @@
         <item name="android:textColor">@android:color/black</item>
         <item name="android:padding">10dp</item>
         <item name="android:textSize">18sp</item>
+    </style>
+
+    <style name="CustomTextViewStyle" parent="android:Widget.TextView">
+        <item name="android:textSize">15dp</item>
     </style>
 </resources>
